--- a/src/componets/App/app.module.scss
+++ b/src/componets/App/app.module.scss
@@ -1,12 +1,7 @@
-// mobile first 
+@import '../../scss/variables';
 
 
-// variables
-$black: #000000;
-$green: #3faf6c;
-$border: #7f7f7f;
-
-
+//normalize
 * {
     box-sizing: border-box;
 }
@@ -18,10 +13,15 @@ body {
     margin: 0px;
 }
 
+//container width
+
 .container {
     max-width: 560px;
+    min-width: 320px;
     margin: 0px auto;
 }
+
+// mobile first 
 
 .tracker {
     display: flex;
@@ -39,16 +39,17 @@ body {
 
     &_form {
         position: relative;
+        width: 100%;
+        padding: 0px 30px;
+        margin-bottom: 30px;
 
         &_input {
             padding: 0px 50px 0px 17px;
-            margin-left: -20px;
-            width: 295px;
-            border: 1px solid $border;
+            width: 100%;
+            border: 1px solid $border-input;
             border-radius: 25px;
             font-size: 17px;
             line-height: 42px;
-            margin-bottom: 25px;
         }
 
         &_button {
@@ -59,23 +60,33 @@ body {
             border: none;
             border-radius: 50%;
             position: absolute;
-            right: 2px;
+            right: 32px;
             top: 2px;
             cursor: pointer;
+            background-color: $white;
 
 
             svg {
-                font-size: 40px;
                 fill: $green;
+                width: 40px;
+                height: 40px;
+
+                transition: fill $duration ease;
+            }
+
+            &:hover {
+                svg {
+                    fill: $stopwatch-pause-hover;
+                }
             }
         }
     }
 
-    &_stopwatch {
+    &_stopwatches {
         width: 100%;
 
-        &:first-of-type {
-            border-top: 1px solid black;
+        &>:first-of-type {
+            border-top: 1px solid $border-stopwatch;
         }
     }
 }
